--- a/web_app/templates/new_tweet.html
+++ b/web_app/templates/new_tweet.html
@@ -10,13 +10,13 @@
     <form action="/tweets/create" method="POST">
 
         <label>Title:</label>
-        <input type="text" name="tweet_tweet" placeholder="@Austen rules!" value="@Austen rules!">
+        <input type="text" name="tweet_tweet" placeholder="Hey @jack!" value="Hey @jack!">
 
         <label>Twitterer:</label>
         <select name="tweet_handle">
-          <option value="A1">@Austen</option>
-          <option value="A2">@LambdaSchool</option>
-          <option value="A3">@HumansOfLambda</option>
+          <option value="3320010078">@jockowillink</option>
+          <option value="1079776144524754944">@NikkiHaley</option>
+          <option value="61283362">@TimKennedyMMA</option>
         </select>
 
         <button type="submit" class="btn btn-primary">Submit</button>
